# ShlibVK

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt
examples/01-Triangle/: CMakeLists.txt  main.c
examples/02-Quad3D/: CMakeLists.txt  main.c
examples/02-Triangle3D/: CMakeLists.txt  main.c
examples/03-Texture/: CMakeLists.txt  main.c
examples/resources/: quad.frag  quad.vert  triangle.frag
examples/resources/shaders/: quad.frag  quad.vert  texture.frag  texture.vert  triangle.vert
include/ShlibVK/: Buffer.h  Graphics.h  Mesh.h  Pipeline.h  ShlibVK.h  StorageBuffer.h  Texture.h  UniformBuffer.h  Utils.h  Window.h
include/ShlibVK/Math/: Matrix.h  Vec2.h  Vec3.h  Vec4.h
include/ShlibVK/Utilities/: List.h
src/: Buffer.c  Graphics.c  Mesh.c  Pipeline.c  StorageBuffer.c  Texture.c  UniformBuffer.c  Utils.c  Window.c
src/Math/: Matrix.c  Vec2.c  Vec3.c  Vec4.c
src/Utilities/: List.c
